--- a/source/custom.css
+++ b/source/custom.css
@@ -26,7 +26,7 @@
   background-color: #7b83eb;
   border-color: #7b83eb;
 }
-.btn-teams:focus {
+.btn-teams:focus, .btn-teams.focus {
   box-shadow: 0 0 0 0.2rem #7b83eb;
 }
 
@@ -41,7 +41,7 @@
   background-color: #37af48;
   border-color: #37af48;
 }
-.btn-campuslink:focus {
+.btn-campuslink:focus, .btn-campuslink.focus {
   box-shadow: 0 0 0 0.2rem #7b83eb;
 }
 
