--- a/css/styles.css
+++ b/css/styles.css
@@ -144,10 +144,12 @@ button {
 button {
   text-transform: none; }
 
-button {
+button,
+html [type="button"] {
   -webkit-appearance: button; }
 
-button::-moz-focus-inner {
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner {
   padding: 0;
   border-style: none; }
 
@@ -394,11 +396,28 @@ button.bg-dark:focus {
   -ms-flex-align: center !important;
       align-items: center !important; }
 
+.mr-0 {
+  margin-right: 0 !important; }
+
+.mb-2 {
+  margin-bottom: 0.5rem !important; }
+
+.mb-3 {
+  margin-bottom: 1rem !important; }
+
 .mb-4 {
   margin-bottom: 1.5rem !important; }
 
-.mt-5 {
-  margin-top: 3rem !important; }
+.mt-6 {
+  margin-top: 6rem !important; }
+
+
+.px-0 {
+  padding-right: 0 !important; }
+
+
+.px-0 {
+  padding-left: 0 !important; }
 
 
 .py-3 {
@@ -423,28 +442,26 @@ button.bg-dark:focus {
   padding-top: 9rem !important; }
 
 
-.my-auto {
-  margin-top: auto !important; }
-
-
 .mx-auto {
   margin-right: auto !important; }
-
-
-.my-auto {
-  margin-bottom: auto !important; }
 
 
 .mx-auto {
   margin-left: auto !important; }
 
 @media (min-width: 768px) {
+  .mt-md-0 {
+    margin-top: 0 !important; } }
+
+@media (min-width: 992px) {
+  .mt-lg-5 {
+    margin-top: 3rem !important; }
   
-  .py-md-0 {
-    padding-top: 0 !important; }
+  .my-lg-auto {
+    margin-top: auto !important; }
   
-  .py-md-0 {
-    padding-bottom: 0 !important; } }
+  .my-lg-auto {
+    margin-bottom: auto !important; } }
 
 .text-center {
   text-align: center !important; }
@@ -622,7 +639,7 @@ body {
     top: 0;
     content: "";
     background-color: rgba(0, 0, 0, 0.7); }
-  .bg-hero .container {
+  .bg-hero .container-fluid {
     z-index: 2;
     position: relative; }
 
