--- a/css/styles.css
+++ b/css/styles.css
@@ -411,6 +411,9 @@ button.bg-dark:focus {
 .mt-6 {
   margin-top: 6rem !important; }
 
+.mt-7 {
+  margin-top: 9rem !important; }
+
 
 .px-0 {
   padding-right: 0 !important; }
@@ -419,7 +422,7 @@ button.bg-dark:focus {
 .px-0 {
   padding-left: 0 !important; }
 
-
+.pt-3,
 .py-3 {
   padding-top: 1rem !important; }
 
@@ -450,12 +453,14 @@ button.bg-dark:focus {
   margin-left: auto !important; }
 
 @media (min-width: 768px) {
-  .mt-md-0 {
-    margin-top: 0 !important; } }
+  .pt-md-5 {
+    padding-top: 3rem !important; } }
 
 @media (min-width: 992px) {
   .mt-lg-5 {
     margin-top: 3rem !important; }
+  .pt-lg-8 {
+    padding-top: 12rem !important; }
   
   .my-lg-auto {
     margin-top: auto !important; }
@@ -617,10 +622,6 @@ body {
     background: linear-gradient(to right, rgba(255, 23, 68, 0.1) 0, #263238 50%, rgba(255, 23, 68, 0.1) 100%); }
 
 /*vertical heights */
-
-@media (min-width: 768px) {
-  .vh-md-100 {
-    height: 100vh; } }
 
 .bg-hero {
   background-color: #000000;
