--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,13 @@
+.background {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-image: url('../img/bg.webp');
+  background-size: cover;
+  background-attachment: fixed;
+  opacity: 0.5;
+}
+
 .text-red {
   color: #fff;
   text-shadow:
