--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,6 @@ body {
 /*vertical heights */
 
 .bg-hero {
-  background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='#000000' cx='400' cy='400' r='600'/%3E%3Ccircle fill='#4a000e' cx='400' cy='400' r='500'/%3E%3Ccircle fill='#7d0018' cx='400' cy='400' r='400'/%3E%3Ccircle fill='#b00022' cx='400' cy='400' r='300'/%3E%3Ccircle fill='#e3002c' cx='400' cy='400' r='200'/%3E%3Ccircle fill='#ff1616' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
   /* background by SVGBackgrounds.com */
   background-attachment: fixed;
@@ -639,7 +638,7 @@ body {
     left: 0;
     top: 0;
     content: "";
-    background-color: rgba(0, 0, 0, 0.7); }
+  }
   .bg-hero .container-fluid {
     z-index: 2;
     position: relative; }
