--- a/css/custom.css
+++ b/css/custom.css
@@ -2,10 +2,11 @@
   height: 100vh;
   width: 100vw;
   position: fixed;
-  background-image: url('../img/bg.webp');
+  background-image: url('../img/bg.png');
   background-size: cover;
   background-attachment: fixed;
-  opacity: 0.5;
+  opacity: 0.4;
+  filter: blur(4px);
 }
 
 .text-red {
