--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,7 @@
   height: 100vh;
   width: 100vw;
   position: fixed;
+  background-color: #400;
   background-image: url('../img/bg.png');
   background-size: cover;
   background-attachment: fixed;
