all pngs are now webps

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@
   width: 100vw;
   position: fixed;
   background-color: #400;
-  background-image: url('../img/bg.png');
+  background-image: url('../img/bg.webp');
   background-size: cover;
   background-attachment: fixed;
   opacity: 0.4;
